--- a/cmd/pyroscope/help-all.txt.tmpl
+++ b/cmd/pyroscope/help-all.txt.tmpl
@@ -812,7 +812,7 @@ Usage of ./pyroscope:
   -storage.azure.user-assigned-id string
     	User assigned identity. If empty, then System assigned identity is used.
   -storage.backend string
-    	Backend storage to use. Supported backends are: s3, gcs, azure, swift, filesystem, cos. (default "filesystem")
+    	Backend storage to use. Supported backends are: s3, gcs, azure, swift, filesystem, cos.
   -storage.cos.app-id string
     	COS app id
   -storage.cos.bucket string
@@ -842,7 +842,7 @@ Usage of ./pyroscope:
   -storage.cos.tls-handshake-timeout duration
     	Maximum time to wait for a TLS handshake. 0 means no limit. (default 10s)
   -storage.filesystem.dir string
-    	Local filesystem storage directory.
+    	Local filesystem storage directory. (default "./data-shared")
   -storage.gcs.bucket-name string
     	GCS bucket name
   -storage.gcs.service-account string
