--- a/cmd/pyroscope/help.txt.tmpl
+++ b/cmd/pyroscope/help.txt.tmpl
@@ -256,7 +256,7 @@ Usage of ./pyroscope:
   -storage.azure.endpoint-suffix string
     	Azure storage endpoint suffix without schema. The account name will be prefixed to this value to create the FQDN. If set to empty string, default endpoint suffix is used.
   -storage.backend string
-    	Backend storage to use. Supported backends are: s3, gcs, azure, swift, filesystem, cos. (default "filesystem")
+    	Backend storage to use. Supported backends are: s3, gcs, azure, swift, filesystem, cos.
   -storage.cos.app-id string
     	COS app id
   -storage.cos.bucket string
@@ -270,7 +270,7 @@ Usage of ./pyroscope:
   -storage.cos.secret-key string
     	COS secret key
   -storage.filesystem.dir string
-    	Local filesystem storage directory.
+    	Local filesystem storage directory. (default "./data-shared")
   -storage.gcs.bucket-name string
     	GCS bucket name
   -storage.gcs.service-account string
