Improve command usability

--- a/cmd/profilecli/tool/blocks/tool.blocks.detail.gohtml
+++ b/cmd/profilecli/tool/blocks/tool.blocks.detail.gohtml
@@ -27,7 +27,7 @@
         </div>
         <div class="row my-3">
             <p>
-                <a href="/blocks?tenantId={{ .User }}">Back to tenant</a>
+                <a href="/blocks/list?tenantId={{ .User }}">Back to tenant</a>
             </p>
             <table class="table">
                 <tr>
