--- a/cmd/profilecli/tool/static/pyroscope-styles.css
+++ b/cmd/profilecli/tool/static/pyroscope-styles.css
@@ -36,3 +36,9 @@ a:hover, a:active {
     width:0.1%;
     white-space: nowrap;
 }
+
+button.acc-btn {
+    display: grid;
+    grid-template-columns: 1fr max-content max-content;
+    grid-gap: 10px;
+}
