--- a/cmd/profilecli/tool/blocks/tool.blocks.index.gohtml
+++ b/cmd/profilecli/tool/blocks/tool.blocks.index.gohtml
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Blocks Tool: Grafana Pyroscope</title>
+    <title>Bucket Blocks Explorer: Grafana Pyroscope</title>
 
     <link rel="stylesheet" href="/tool/static/bootstrap-5.1.3.min.css">
     <link rel="stylesheet" href="/tool/static/bootstrap-icons-1.8.1.css">
@@ -17,7 +17,7 @@
     <div class="container">
         <div class="header row border-bottom py-3 flex-column-reverse flex-sm-row">
             <div class="col-12 col-sm-9 text-center text-sm-start">
-                <h2>Blocks Tool: Grafana Pyroscope</h2>
+                <h3>Bucket Blocks Explorer: Grafana Pyroscope</h3>
             </div>
             <div class="col-12 col-sm-3 text-center text-sm-end mb-3 mb-sm-0">
                 <a href="/blocks/index">
@@ -26,7 +26,7 @@
             </div>
         </div>
         <div class="row my-3">
-            <h4>Tenants</h4>
+            <h5>Tenants</h5>
             <div class="table-responsive">
                 <table class="table table-bordered table-hover table-striped">
                     <thead>
