--- a/cmd/profilecli/tool/blocks/tool.blocks.list.gohtml
+++ b/cmd/profilecli/tool/blocks/tool.blocks.list.gohtml
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Blocks Tool - {{ .User }}</title>
+    <title>Bucket Blocks Tool - {{ .User }}</title>
 
     <link rel="stylesheet" href="/tool/static/bootstrap-5.1.3.min.css">
     <link rel="stylesheet" href="/tool/static/bootstrap-icons-1.8.1.css">
@@ -17,7 +17,7 @@
     <div class="container">
         <div class="header row border-bottom py-3 flex-column-reverse flex-sm-row">
             <div class="col-12 col-sm-9 text-center text-sm-start">
-                <h2>Blocks Tool: Tenant {{ .User }}</h2>
+                <h3>Bucket Blocks Explorer: Tenant {{ .User }}</h3>
             </div>
             <div class="col-12 col-sm-3 text-center text-sm-end mb-3 mb-sm-0">
                 <a href="/blocks/index">
@@ -45,7 +45,7 @@
             </div>
         </div>
         <div class="row my-3">
-            <h3>{{ len $.SelectedBlocks }} block groups found</h3>
+            <h5>{{ len $.SelectedBlocks }} block groups found</h5>
             <div class="accordion">
                 {{ $user := .User }}
                 {{ range $i, $blockGroup := .SelectedBlocks }}
