Switch to relative links in block viewer to address issue with alternate base URLs

--- a/pkg/operations/tool.blocks.detail.gohtml
+++ b/pkg/operations/tool.blocks.detail.gohtml
@@ -20,14 +20,14 @@
                 <h3>Bucket Blocks Explorer: Block Details</h3>
             </div>
             <div class="col-12 col-sm-3 text-center text-sm-end mb-3 mb-sm-0">
-                <a href="/ops/object-store/tenants">
+                <a href="../../../tenants">
                     <img alt="Pyroscope logo" class="pyroscope-brand" src="/static/pyroscope-logo.png">
                 </a>
             </div>
         </div>
         <div class="row my-3">
             <p>
-                <a href="/ops/object-store/tenants/{{ .User }}/blocks">Back to tenant</a>
+                <a href="../../../tenants/{{ .User }}/blocks">Back to tenant</a>
             </p>
             <table class="table">
                 <tr>
