Update styling to match grafana

--- a/public/app/components/ExportData.module.scss
+++ b/public/app/components/ExportData.module.scss
@@ -43,6 +43,7 @@
   height: 37px;
   padding: 0;
   margin-left: 2px;
+  margin-top: 0px;
   border-color: transparent;
   background-color: transparent;
   min-width: auto;
