--- a/pkg/operations/tool.blocks.list.gohtml
+++ b/pkg/operations/tool.blocks.list.gohtml
@@ -123,7 +123,7 @@
             </div>
             {{ else }}
                 <hr/>
-                {{ $groupDuration := .SelectedBlocks.GroupDuration}}
+                {{ $groupDuration := .SelectedBlocks.GroupDurationMinutes}}
                 {{ $blockWidth := 20 }}
                 {{ $blockSpacing := 2 }}
                 {{ if gt .SelectedBlocks.MaxBlocksPerGroup 32 }}
