Fix some comments
Signed-off-by: goodmost <zhaohaiyang@outlook.com>

--- a/public/app/components/QueryInput/QueryInput.module.scss
+++ b/public/app/components/QueryInput/QueryInput.module.scss
@@ -42,7 +42,7 @@
 
   // We use !important so that we can overwrite the classes from
   // pre[class*="language-"]
-  // which from from prism.scss
+  // which from prism.scss
   background: none !important;
   padding: 0 !important;
   margin: 0 !important;
