Update test reference file

--- a/cmd/pyroscope/help-all.txt.tmpl
+++ b/cmd/pyroscope/help-all.txt.tmpl
@@ -143,6 +143,8 @@ Usage of ./pyroscope:
     	Expands ${var} in config according to the values of the environment variables.
   -config.file string
     	yaml file to load
+  -config.show_banner
+    	Prints the application banner at startup. (default true)
   -consul.acl-token string
     	ACL Token used to interact with Consul.
   -consul.cas-retry-delay duration
