--- a/cmd/pyroscope/help.txt.tmpl
+++ b/cmd/pyroscope/help.txt.tmpl
@@ -39,6 +39,8 @@ Usage of ./pyroscope:
     	Expands ${var} in config according to the values of the environment variables.
   -config.file string
     	yaml file to load
+  -config.show_banner
+    	Prints the application banner at startup. (default true)
   -consul.hostname string
     	Hostname and port of Consul. (default "localhost:8500")
   -distributor.aggregation-period duration
